[package]
name = "stripe-update-card"
version = "2.0.0"
authors = ["François-Guillaume RIBREAU <github@fgribreau.com>"]
homepage = "https://github.com/FGRibreau/stripe-update-card"
repository = "https://github.com/FGRibreau/stripe-update-card"
readme = "README.md"
documentation = "https://docs.rs/stripe-update-card"
description = "💳 Stripe update card page"
keywords = ["stripe", "card", "payment"]
categories = ["web-programming"]
license = "MIT"
edition = "2021"
include = ["src/**/*", "Cargo.toml","README.md", "templates/**/*"]


[dependencies]
actix-web = { version = "4.3.1"}
serde = "1.0.171"
serde_json = "1.0.103"
serde_derive = "1.0.171"
lazy_static = "1.4.0"
log = "0.4.19"
async-stripe = { version = "0.22.2", features = ["runtime-tokio-hyper"] }
handlebars = { version = "4.2.1", features = ["dir_source"] }
env_logger = "0.10.0"
